force-app/main/default/objects/EncounterDiagnosis__c/EncounterDiagnosis__c.object-meta.xml
<CustomObject>
    <label>Encounter Diagnosis</label>
    <nameField>
        <label>Encounter Diagnosis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encounter Diagnoses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>