force-app/main/default/objects/EncounterDiagnosis__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <referenceTo>Condition__c</referenceTo>
    <relationshipLabel>Encounter Diagnoses</relationshipLabel>
    <relationshipName>EncounterDiagnoses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>