force-app/main/default/objects/EncounterDiagnosis__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Admitting</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>