force-app/main/default/objects/EncounterDiagnosis__c/listViews/All_Encounter_Diagnoses.listView-meta.xml
<ListView>
    <fullName>All_Encounter_Diagnoses</fullName>
    <columns>NAME</columns>
    <columns>Encounter__c</columns>
    <columns>Condition__c</columns>
    <columns>Type__c</columns>
    <columns>Rank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Encounter Diagnoses</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>