force-app/main/default/objects/EncounterDiagnosis__c/listViews/Principal_Diagnoses.listView-meta.xml
<ListView>
    <fullName>Principal_Diagnoses</fullName>
    <columns>NAME</columns>
    <columns>Encounter__c</columns>
    <columns>Condition__c</columns>
    <columns>Type__c</columns>
    <columns>Rank__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Principal</value>
    </filters>
    <label>Principal Diagnoses</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>